--- a/caso3/mysql-sts.yaml
+++ b/caso3/mysql-sts.yaml
@@ -59,4 +59,4 @@ spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
-          storage: 100Mi
+          storage: 1Gi
