--- a/caso3/mysql-sts.yaml
+++ b/caso3/mysql-sts.yaml
@@ -1,8 +1,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: mysql
-  namespace: cportal-c3
+  name: kb-mysql
 spec:
   serviceName: "mysql"
   replicas: 1
@@ -14,53 +13,48 @@ spec:
       labels:
         app: mysql
     spec:
-      initContainers:
-        - name: init-db
-          image: busybox
-          command: ["sh", "-c", "chmod +x /docker-entrypoint-initdb.d/init-db.sh && /docker-entrypoint-initdb.d/init-db.sh"]
-          volumeMounts:
-            - name: init-script-volume
-              mountPath: /docker-entrypoint-initdb.d
       containers:
-        - name: mysql
-          image: mysql:5.7
-          env:
-            - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: metabase-db-secret
-                  key: DB_PASSWORD
-            - name: MYSQL_DATABASE
-              valueFrom:
-                secretKeyRef:
-                  name: metabase-db-secret
-                  key: DB_NAME
-            - name: MYSQL_USER
-              valueFrom:
-                secretKeyRef:
-                  name: metabase-db-secret
-                  key: DB_USER
-            - name: MYSQL_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: metabase-db-secret
-                  key: DB_PASSWORD
-          ports:
-            - containerPort: 3306
-          volumeMounts:
-            - name: mysql-data
-              mountPath: /var/lib/mysql
-            - name: init-script-volume
-              mountPath: /docker-entrypoint-initdb.d
-      volumes:
-        - name: init-script-volume
-          configMap:
-            name: init-script-configmap
-      volumeClaimTemplates:
-        - metadata:
-            name: mysql-data
-          spec:
-            accessModes: [ "ReadWriteOnce" ]
-            resources:
-              requests:
-                storage: 100Mi
+      - name: mysql
+        image: mysql:8.4
+        ports:
+        - containerPort: 3306
+        args:
+        - --default-authentication-plugin=mysql_native_password
+        readinessProbe:
+          exec:
+            command: ['mysqladmin', 'ping', '-h', 'localhost']
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 5
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: MYSQL_ROOT_PASSWORD
+        - name: MYSQL_DATABASE
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: MYSQL_DATABASE
+        - name: MYSQL_USER
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: MYSQL_USER
+        - name: MYSQL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: MYSQL_PASSWORD
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
+  volumeClaimTemplates:
+  - metadata:
+      name: mysql-persistent-storage
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 1Gi
