--- a/caso3/mysql-sts.yaml
+++ b/caso3/mysql-sts.yaml
@@ -19,7 +19,7 @@ spec:
         ports:
         - containerPort: 3306
         args: 
-        - --default-authentication-plugin=mysql_native_password  # Configura el plugin de autenticación
+        - --default-authentication-plugin=mysql_native_password
         readinessProbe:
           exec:
             command: ['mysqladmin', 'ping', '-h', 'localhost']
