--- a/caso3/init-script-job.yaml
+++ b/caso3/init-script-job.yaml
@@ -11,19 +11,24 @@ spec:
         command: ["/bin/sh", "-c"]
         args:
         - |
-          # Install wget
-          microdnf update && microdnf install -y wget && microdnf clean all
+          # Install wget and gzip
+          microdnf update && microdnf install -y wget gzip && microdnf clean all
           
-          # Download the SQL file
-          wget -O dataSetGoogle "https://drive.google.com/uc?export=download&id=1SDsrhrNCSL-PbOhFTmZv29DjKnakBklu"
+          wget -O google-mobility.sql.gz "https://drive.google.com/uc?export=download&id=1SDsrhrNCSL-PbOhFTmZv29DjKnakBklu"
           
-          # Check if the file was downloaded successfully
-          if [ ! -f dataSetGoogle ]; then
-            echo "Failed to download dataSetGoogle"
+          if [ ! -f google-mobility.sql.gz ]; then
+            echo "Failed to download google-mobility.sql.gz"
             exit 1
           fi
           
-          # Execute SQL commands
+          # Decompress the file
+          gunzip google-mobility.sql.gz
+
+          if [ ! -f google-mobility.sql ]; then
+            echo "Failed to decompress google-mobility.sql.gz"
+            exit 1
+          fi
+
           mysql -h mysql -u root -p$MYSQL_ROOT_PASSWORD <<EOF
           CREATE DATABASE IF NOT EXISTS metabase;
           ALTER USER 'metabase_user'@'%' IDENTIFIED WITH mysql_native_password BY 'securepassword';
@@ -32,7 +37,7 @@ spec:
           EOF
           
           # Import the SQL file
-          mysql -h mysql -u root -p$MYSQL_ROOT_PASSWORD metabase < dataSetGoogle
+          mysql -h mysql -u root -p$MYSQL_ROOT_PASSWORD metabase < google-mobility.sql
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
