--- a/caso3/db-secret.yaml
+++ b/caso3/db-secret.yaml
@@ -2,9 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: metabase-db-secret
-type: Opaque
+  creationTimestamp: null
 data:
-  MYSQL_ROOT_PASSWORD: cm9vdHBhc3N3b3Jk  # rootpassword
   DB_USER: bWV0YWJhc2VfdXNlcg== # metabase_user
   DB_PASSWORD: c2VjdXJlcGFzc3dvcmQ= # securepassword
   DB_NAME: bWV0YWJhc2U= # metabase
