--- a/caso3/metabase-deployment.yaml
+++ b/caso3/metabase-deployment.yaml
@@ -2,43 +2,87 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: metabase
+  labels:
+    app: metabase
 spec:
   replicas: 1
   selector:
-	matchLabels:
-	  app: metabase
+    matchLabels:
+      app: metabase
   template:
-	metadata:
-	  labels:
-		app: metabase
-	spec:
-	  containers:
-	  - name: metabase
-		image: metabase/metabase:latest
-		env:
-		- name: MB_DB_TYPE
-		  value: "mysql"
-		- name: MB_DB_DBNAME
-		  valueFrom:
-			secretKeyRef:
-			  name: metabase-db-secret
-			  key: DB_NAME
-		- name: MB_DB_PORT
-		  value: "3306"
-		- name: MB_DB_USER
-		  valueFrom:
-			secretKeyRef:
-			  name: metabase-db-secret
-			  key: DB_USER
-		- name: MB_DB_PASS
-		  valueFrom:
-			secretKeyRef:
-			  name: metabase-db-secret
-			  key: DB_PASSWORD
-		- name: MB_DB_HOST
-		  valueFrom:
-			secretKeyRef:
-			  name: metabase-db-secret
-			  key: DB_HOST
-		ports:
-		- containerPort: 3000
+    metadata:
+      labels:
+        app: metabase
+    spec:
+      initContainers:
+        - name: "sqlconnection-starter"
+          image: "mysql:9.0"
+          imagePullPolicy: "IfNotPresent"
+          env:
+            - name: MB_DB_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: metabase-configmap
+                  key: MB_DB_HOST
+            - name: MB_DB_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: metabase-configmap
+                  key: MB_DB_PORT
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: metabase-db-secret
+                  key: db-user
+            - name: MB_DB_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: metabase-db-secret
+                  key: db-password        
+          command: ["sh", "-c", "mysql -h $MB_DB_HOST -P $MB_DB_PORT -u$DB_USER -p$MB_DB_PASS"] 
+
+      containers:
+        - name: metabase
+          image: metabase/metabase:v0.50.20.5
+          imagePullPolicy: Always
+          env:
+            - name: MB_DB_TYPE
+              valueFrom:
+                configMapKeyRef:
+                  name: metabase-configmap
+                  key: MB_DB_TYPE 
+            - name: MB_DB_DBNAME
+              valueFrom:
+                secretKeyRef:
+                  name: metabase-db-secret
+                  key: db-name
+            - name: MB_DB_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: metabase-configmap
+                  key: MB_DB_PORT
+            - name: MB_DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: metabase-db-secret
+                  key: db-user
+            - name: MB_DB_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: metabase-db-secret
+                  key: db-password
+            - name: MB_DB_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: metabase-configmap
+                  key: MB_DB_HOST
+          ports:
+            - name: metabase
+              containerPort: 3000
+      volumes:
+        - name: secret-volume
+          secret:
+            secretName: metabase-db-secret
+        - configMap:
+            name: metabase-config map
+          name: config-volume
