--- a/caso3/metabase-ingress.yaml
+++ b/caso3/metabase-ingress.yaml
@@ -14,6 +14,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: metabase
+            name: metabase-service
             port:
               number: 80
