--- a/caso3/metabase-service.yaml
+++ b/caso3/metabase-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: metabase
+  name: metabase-service
 spec:
   type: LoadBalancer
   ports:
   - port: 80
-	targetPort: 3000
+	  targetPort: 3000
   selector:
-	app: metabase
+	  app: metabase
