--- a/caso3/mysql-service.yaml
+++ b/caso3/mysql-service.yaml
@@ -2,8 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
+  labels:
+    app: mysqldb
 spec:
   ports:
   - port: 3306
+    name: mysql
   selector:
     app: mysql
