--- a/caso3/mysql-sts.yaml
+++ b/caso3/mysql-sts.yaml
@@ -25,7 +25,7 @@ spec:
         - name: "sqldump-download"
           image: "alpine:latest"
           imagePullPolicy: "IfNotPresent"
-          command: ["sh", "-c", "wget --no-check-certificate 'https://drive.google.com/file/d/1HXy4iBg6UO7GAuIY08PUDt78oKIoArcZ/view?usp=sharing' -O /sqldump/google-mobility.sql"]
+          command: ["sh", "-c", "wget --no-check-certificate 'https://drive.google.com/uc?export=download&id=1HXy4iBg6UO7GAuIY08PUDt78oKIoArcZ' -O /sqldump/google-mobility.sql"]
           volumeMounts:
             - name: sql-dump-volume
               mountPath: "/sqldump"
